# Leadscout

./: .env.example  .gitignore  README.md  SPEC.md  leadscout-spec-v1.md  pyproject.toml
compliance/: LIA.md  region_rules.md  suppression_policy.md
data/pattern_library/: README.md  community-self-support-gap.md  docs-lagging-product.md  funded-can-afford.md  growth-outpacing-support.md  help-center-gaps.md  human-answered-repetitive-qs.md  slow-support-response.md  support-team-scaling-manually.md
docs/: BENCHMARKS.md  BUILD_LOG.md  DECISIONS_NEEDED.md  HANDOFF.md  KNOWN_LIMITATIONS.md  NEXT_STEPS.md  ROADMAP_PROGRESS.md
kernel/: disqualifiers.md  icp_signals.md  niche.yaml  offer.md
leadscout/: __init__.py  capture.py  cli.py  config.py  db.py  kernel.py  logging.py  models.py  prompts.py  rank.py
leadscout/demo/: __init__.py  rag.py  scaffold.py
leadscout/diagnose/: __init__.py  cost.py  diagnosis.py  patterns.py
leadscout/distribution/: __init__.py  content.py  warm.py
leadscout/intelligence/: __init__.py  patterns.py  pricing.py  relgraph.py  scorer.py  (+1 more)
prompts/: demo_builder.md  diagnostician.md  researcher.md  writer.md
templates/: call_notes.md
tests/: conftest.py  test_brief_e2e.py  test_browser.py  test_capture.py  test_compliance.py  test_content.py  test_demo.py  test_docquality.py  test_expand.py  test_extract_diagnose.py  test_feeds.py  test_github.py  test_kernel.py  test_links.py  test_llm_router.py  test_outreach_warm.py  test_pipeline_and_sources.py  test_pipeline_crm.py  test_rank.py  test_search.py  test_techstack.py  test_verify.py
(+37 files in other folders)
